# intheo

./: .gitignore  .gitlab-ci.yml  README.md
.github/workflows/: ci.yml
interpreter/: Main_000.v
intheo/: Cargo.toml
intheo/src/: lib.rs
intheo/src/effect/: mod.rs
intheo/src/net/: mod.rs
intheo/src/pointer/: mod.rs
intheo/src/vector/: mod.rs
type-theory/: main.tex
